[gd_scene load_steps=30 format=2]

[ext_resource path="res://textures/environment/Sly3.png" type="Texture" id=1]
[ext_resource path="res://textures/Gui/title/PixelBlock-2D.png" type="Texture" id=2]
[ext_resource path="res://textures/environment/MidLayer.png" type="Texture" id=3]
[ext_resource path="res://textures/environment/BackLayer.png" type="Texture" id=4]
[ext_resource path="res://textures/environment/FrontLayer.png" type="Texture" id=5]
[ext_resource path="res://textures/Gui/title/Free-Pro.png" type="Texture" id=6]
[ext_resource path="res://scripts/Menu/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://textures/Gui/widgets.png" type="Texture" id=8]
[ext_resource path="res://fonts/Regular.tres" type="DynamicFont" id=9]
[ext_resource path="res://scripts/Menu/Menu.gd" type="Script" id=10]
[ext_resource path="res://textures/Blocks/dirt.png" type="Texture" id=11]
[ext_resource path="res://textures/Gui/advancements/window.png" type="Texture" id=12]
[ext_resource path="res://scripts/Menu/WorldSelect.gd" type="Script" id=13]
[ext_resource path="res://textures/Gui/MenuButton.png" type="Texture" id=14]
[ext_resource path="res://textures/Gui/world_selection.png" type="Texture" id=15]
[ext_resource path="res://textures/Gui/demo_background.png" type="Texture" id=16]
[ext_resource path="res://textures/Blocks/stone.png" type="Texture" id=17]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 0, 66, 200, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 0, 46, 200, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 0, 86, 200, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 64, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 14 )
region = Rect2( 0, 56, 64, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 14 )
region = Rect2( 0, 28, 64, 28 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 14 )
region = Rect2( 0, 56, 64, 28 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.176471, 0.176471, 0.176471, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 15 )
region = Rect2( 48, 6, 14, 22 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 15 )
region = Rect2( 48, 37, 14, 22 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 15 )
region = Rect2( 10, 5, 15, 23 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 15 )
region = Rect2( 10, 37, 14, 22 )

[node name="Menu" type="Node2D"]
script = ExtResource( 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="sky" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2( 1, 0.1 )
motion_offset = Vector2( 0, -540 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/sky"]
position = Vector2( 12.7951, -0.456726 )
texture = ExtResource( 1 )
centered = false

[node name="BackLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_offset = Vector2( 0, -540 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/BackLayer"]
position = Vector2( 0, 2.1955 )
texture = ExtResource( 4 )
centered = false

[node name="MidLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.4 )
motion_offset = Vector2( 0, -540 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/MidLayer"]
position = Vector2( 0.777649, 1.5553 )
texture = ExtResource( 3 )
centered = false

[node name="MidLayer2" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.45 )
motion_offset = Vector2( 0, -540 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/MidLayer2"]
texture = ExtResource( 5 )
centered = false

[node name="Cave" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
visible = false
motion_scale = Vector2( 1, 0.1 )
motion_offset = Vector2( 0, -540 )
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="TextureRect" parent="CanvasLayer/ParallaxBackground/Cave"]
modulate = Color( 0.521569, 0.521569, 0.521569, 1 )
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 17 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditPanel" type="Sprite" parent="CanvasLayer"]

[node name="MainScreen" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Sprite" parent="CanvasLayer/MainScreen"]
position = Vector2( 960, 125 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Subtitle" type="Sprite" parent="CanvasLayer/MainScreen/Title"]
position = Vector2( 0, 50 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="Options" type="TextureButton" parent="CanvasLayer/MainScreen"]
margin_left = 560.0
margin_top = 575.0
margin_right = 760.0
margin_bottom = 615.0
rect_scale = Vector2( 4, 4 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MainScreen/Options"]
margin_left = 53.5
margin_top = 2.99998
margin_right = 363.5
margin_bottom = 53.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color_shadow = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 9 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="CanvasLayer/MainScreen"]
margin_left = 560.0
margin_top = 700.0
margin_right = 760.0
margin_bottom = 740.0
rect_scale = Vector2( 2, 4 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MainScreen/Credits"]
margin_top = 3.0
margin_right = 316.0
margin_bottom = 53.0
rect_scale = Vector2( 0.632, 0.3 )
custom_colors/font_color_shadow = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 9 )
text = "Credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="CanvasLayer/MainScreen"]
margin_left = 980.0
margin_top = 700.0
margin_right = 1180.0
margin_bottom = 720.0
rect_scale = Vector2( 1.9, 4 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MainScreen/Exit"]
margin_top = 3.0
margin_right = 316.0
margin_bottom = 53.0
rect_scale = Vector2( 0.632, 0.3 )
custom_colors/font_color_shadow = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 9 )
text = "Exit Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="CanvasLayer/MainScreen"]
margin_left = 560.0
margin_top = 450.0
margin_right = 760.0
margin_bottom = 470.0
rect_scale = Vector2( 4, 4 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MainScreen/Play"]
margin_left = 53.5
margin_top = 2.99998
margin_right = 363.5
margin_bottom = 53.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color_shadow = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 9 )
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldSelect" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/WorldSelect"]
modulate = Color( 0.592157, 0.592157, 0.592157, 1 )
anchor_top = 0.0214935
anchor_bottom = 0.0214935
margin_left = 232.546
margin_top = 148.728
margin_right = 467.546
margin_bottom = 262.728
rect_scale = Vector2( 6, 6 )
texture = ExtResource( 11 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Sprite" parent="CanvasLayer/WorldSelect"]
position = Vector2( 958.968, 810 )
scale = Vector2( 6, 6 )
texture = ExtResource( 12 )

[node name="NewWorld" type="Control" parent="CanvasLayer/WorldSelect"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="CanvasLayer/WorldSelect/NewWorld"]
margin_left = 190.968
margin_top = 42.0
margin_right = 254.968
margin_bottom = 70.0
rect_scale = Vector2( 6, 6 )
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/NewWorld/Back"]
margin_left = 3.979
margin_top = 7.0
margin_right = 248.979
margin_bottom = 57.0
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="CanvasLayer/WorldSelect/NewWorld"]
margin_left = 620.0
margin_top = 62.0
margin_right = 1055.0
margin_bottom = 112.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Create New World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/WorldSelect/NewWorld"]
anchor_left = 0.0238159
anchor_top = 7.62939e-07
anchor_right = 0.0238159
anchor_bottom = 7.62939e-07
margin_left = 462.307
margin_top = 310.0
margin_right = 1147.31
margin_bottom = 370.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = ExtResource( 9 )
custom_styles/normal = SubResource( 8 )
text = "New World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Seed" type="LineEdit" parent="CanvasLayer/WorldSelect/NewWorld"]
anchor_left = 0.0238159
anchor_top = 7.62939e-07
anchor_right = 0.0238159
anchor_bottom = 7.62939e-07
margin_left = 462.307
margin_top = 500.0
margin_right = 1147.31
margin_bottom = 560.0
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = ExtResource( 9 )
custom_styles/normal = SubResource( 8 )
placeholder_text = "Leave blank for random"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CanvasLayer/WorldSelect/NewWorld"]
margin_left = 464.0
margin_top = 250.0
margin_right = 749.0
margin_bottom = 300.0
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = ExtResource( 9 )
text = "World Name:"

[node name="Name2" type="Label" parent="CanvasLayer/WorldSelect/NewWorld"]
margin_left = 464.0
margin_top = 440.0
margin_right = 749.0
margin_bottom = 490.0
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Seed:"

[node name="Create" type="TextureButton" parent="CanvasLayer/WorldSelect/NewWorld"]
margin_left = 501.221
margin_top = 677.597
margin_right = 701.221
margin_bottom = 697.597
rect_scale = Vector2( 4, 4 )
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/NewWorld/Create"]
margin_top = 3.0
margin_right = 665.0
margin_bottom = 53.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color_shadow = Color( 0.219608, 0.219608, 0.219608, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 9 )
text = "Create World"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadWorld" type="Control" parent="CanvasLayer/WorldSelect"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowL" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld"]
margin_left = 280.0
margin_top = 700.0
margin_right = 294.0
margin_bottom = 722.0
rect_scale = Vector2( 4, 4 )
texture_normal = SubResource( 9 )
texture_pressed = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowR" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld"]
margin_left = 1557.0
margin_top = 700.0
margin_right = 1572.0
margin_bottom = 723.0
rect_scale = Vector2( 4, 4 )
texture_normal = SubResource( 11 )
texture_pressed = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="worldSelects" type="Control" parent="CanvasLayer/WorldSelect/LoadWorld"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 6, 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld"]
margin_left = 756.386
margin_top = 42.0
margin_right = 820.386
margin_bottom = 70.0
rect_scale = Vector2( 6, 6 )
disabled = true
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/play"]
margin_left = 1.639
margin_top = 7.0
margin_right = 261.639
margin_bottom = 57.0
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Play World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld"]
margin_left = 832.0
margin_top = 764.0
margin_right = 896.0
margin_bottom = 792.0
rect_scale = Vector2( 4, 4 )
disabled = true
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Delete"]
margin_left = 1.63898
margin_top = 7.0
margin_right = 261.639
margin_bottom = 57.0
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Delete"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New World" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld"]
margin_left = 1318.97
margin_top = 42.0
margin_right = 1382.97
margin_bottom = 70.0
rect_scale = Vector2( 6, 6 )
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/New World"]
margin_left = 3.979
margin_top = 7.0
margin_right = 248.979
margin_bottom = 57.0
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "New World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld"]
margin_left = 190.968
margin_top = 42.0
margin_right = 254.968
margin_bottom = 70.0
rect_scale = Vector2( 6, 6 )
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Back"]
margin_left = 3.979
margin_top = 7.0
margin_right = 248.979
margin_bottom = 57.0
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Sprite" parent="CanvasLayer/WorldSelect/LoadWorld"]
visible = false
position = Vector2( 961.041, 621.972 )
scale = Vector2( 3, 3 )
texture = ExtResource( 16 )

[node name="title" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning"]
margin_left = -123.422
margin_top = -122.421
margin_right = 311.578
margin_bottom = -72.4215
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Warning!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning"]
margin_left = -123.0
margin_top = -90.0
margin_right = 657.0
margin_bottom = 13.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.517647, 0.517647, 0.517647, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Loading a stable world in a unstable version is not reccomended. World may become corrupt"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld/Warning"]
margin_left = 56.0259
margin_top = 9.79889
margin_right = 120.026
margin_bottom = 37.7989
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning/Ok"]
margin_left = 3.979
margin_top = 7.0
margin_right = 248.979
margin_bottom = 57.0
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Ok"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarnBack" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld/Warning"]
margin_left = -128.077
margin_top = 9.93538
margin_right = -64.077
margin_bottom = 37.9354
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning/WarnBack"]
margin_left = 3.979
margin_top = 7.52734
margin_right = 248.979
margin_bottom = 57.5273
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning2" type="Sprite" parent="CanvasLayer/WorldSelect/LoadWorld"]
visible = false
position = Vector2( 961.041, 621.972 )
scale = Vector2( 3, 3 )
texture = ExtResource( 16 )

[node name="title" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning2"]
margin_left = -123.422
margin_top = -122.421
margin_right = 311.578
margin_bottom = -72.4215
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Warning!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning2"]
margin_left = -123.0
margin_top = -90.0
margin_right = 657.0
margin_bottom = 13.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.517647, 0.517647, 0.517647, 1 )
custom_fonts/font = ExtResource( 9 )
text = "This world is from a unkown version, and may be from a version that is unsupported. Corruption of world/ game crash may result."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld/Warning2"]
margin_left = 56.0259
margin_top = 9.79889
margin_right = 120.026
margin_bottom = 37.7989
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning2/Ok"]
margin_left = 3.979
margin_top = 7.0
margin_right = 248.979
margin_bottom = 57.0
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Ok"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarnBack" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld/Warning2"]
margin_left = -128.077
margin_top = 9.93538
margin_right = -64.077
margin_bottom = 37.9354
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning2/WarnBack"]
margin_left = 3.979
margin_top = 7.52734
margin_right = 248.979
margin_bottom = 57.5273
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning3" type="Sprite" parent="CanvasLayer/WorldSelect/LoadWorld"]
visible = false
position = Vector2( 961.041, 621.972 )
scale = Vector2( 3, 3 )
texture = ExtResource( 16 )

[node name="title" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning3"]
margin_left = -123.422
margin_top = -122.421
margin_right = 311.578
margin_bottom = -72.4215
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Warning!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning3"]
margin_left = -123.0
margin_top = -90.0
margin_right = 657.0
margin_bottom = 13.0
rect_scale = Vector2( 0.3, 0.3 )
custom_colors/font_color = Color( 0.517647, 0.517647, 0.517647, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Loading a stable world in a unstable version is not reccomended. World may become corrupt"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld/Warning3"]
margin_left = 56.0259
margin_top = 9.79889
margin_right = 120.026
margin_bottom = 37.7989
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning3/Ok"]
margin_left = 3.979
margin_top = 7.0
margin_right = 248.979
margin_bottom = 57.0
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Ok"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarnBack" type="TextureButton" parent="CanvasLayer/WorldSelect/LoadWorld/Warning3"]
margin_left = -128.077
margin_top = 9.93538
margin_right = -64.077
margin_bottom = 37.9354
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
texture_disabled = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WorldSelect/LoadWorld/Warning3/WarnBack"]
margin_left = 3.979
margin_top = 7.52734
margin_right = 248.979
margin_bottom = 57.5273
rect_scale = Vector2( 0.23, 0.23 )
custom_colors/font_color_shadow = Color( 0.282353, 0.282353, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 9 )
text = "Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )
script = ExtResource( 7 )

[connection signal="pressed" from="CanvasLayer/MainScreen/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="CanvasLayer/MainScreen/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/NewWorld/Back" to="CanvasLayer/WorldSelect" method="_on_Back_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/NewWorld/Create" to="CanvasLayer/WorldSelect" method="_on_Create_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/ArrowL" to="CanvasLayer/WorldSelect" method="_on_ArrowL_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/ArrowR" to="CanvasLayer/WorldSelect" method="_on_ArrowR_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/play" to="CanvasLayer/WorldSelect" method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/Delete" to="CanvasLayer/WorldSelect" method="_on_Delete_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/New World" to="CanvasLayer/WorldSelect" method="_on_New_World_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/Warning/Ok" to="CanvasLayer/WorldSelect" method="_on_Ok_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/Warning/WarnBack" to="CanvasLayer/WorldSelect" method="_on_WarnBack_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/Warning2/Ok" to="CanvasLayer/WorldSelect" method="_on_Ok_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/Warning2/WarnBack" to="CanvasLayer/WorldSelect" method="_on_WarnBack_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/Warning3/Ok" to="CanvasLayer/WorldSelect" method="_on_Ok_pressed"]
[connection signal="pressed" from="CanvasLayer/WorldSelect/LoadWorld/Warning3/WarnBack" to="CanvasLayer/WorldSelect" method="_on_WarnBack_pressed"]
